Customize Product Models

--- a/api/category/models/category.settings.json
+++ b/api/category/models/category.settings.json
@@ -29,8 +29,8 @@
       "required": false
     },
     "products": {
-      "collection": "product",
-      "via": "categories"
+      "via": "categories",
+      "collection": "product"
     }
   }
 }
